scss/stylesheets/index.scss
@import '../../public/components/bootstrap/dist/css/bootstrap.min';
@import 'globals';
@import 'bootstrap_override';

// Global setting
body {
  padding-top: 70px;
  background:  url('../images/bg.jpg') 0 0 repeat #f2f2f2;
}

 .navbar + #header{
  margin-top: -70px;
}

// Header
#header {
  width:      100%;
  position:   relative;
  max-height: 660px;
  min-height: 300px;
  overflow:   hidden;
  color:      white;
  
  #header-bg {
    width:      100%;
    max-width:  100%;
    min-height: 300px;
    height:     auto;
  }

  .caption {
    @extend .col-md-5;
    @extend .col-sm-7;
    @extend .col-xs-9;

    position: absolute;
    top: $M*10;

    @media screen and (max-width: $MAX-XS) {
      top: $M*7;
      h1 { font-size: 22px; }
    }
  }

  #header-btn {
    position: absolute;
    padding:  0 15px;
    bottom:   $M*18;
    z-index:  0;
    
    @media screen and (max-width: $MAX-XS) {
      bottom:    $M*4;
      
      .btn {
        font-size: 14px;
      }
    }


    .btn {
      margin-right: $M*2;
    }
  }
}

// Timeline
.left-section {
  @extend .container;
  
  #timeline {
    @extend .row;
    .item {
      @extend .col-md-3;
      
      min-height:    400px;
      max-height:    400px;
      overflow-y:    hidden;
      margin-bottom: $M;

      @media screen and (max-width: $MIN-MD) {
        max-height: initial;
      }

      .thumbnail {
        position: relative;
        padding:  0;
        margin:   0;
        background-color: transparent;

        @media screen and (max-width: $MAX-XS) {
          margin: $M 0;  
        }

        .wrapper-shadow {
          position: absolute;
          width:    100%;
          height:   100%;
          background-color: black;
          border-radius:    5px;
          opacity:  0;
          cursor:   pointer;

          &:hover {
            opacity: 0.5;
            transition: opacity 0.3s;

            .fa {
              left:       calc(50% - 21px);
              transition: left, 0.3s;
            }
          }

          .fa {
            position:  absolute;
            left:      100%;
            top:       40%;
            padding:   10px;
            font-size: 24px;
            background-color: #0d989b;
            border-radius:    50%;
            color:            white;

            &:hover {
              background-color: #18C1C5;
            }
          }
        }

        .capture {
          max-width:     100%;
          min-height: 173px;
          max-height: 173px;
          object-fit: cover;
          border-radius: $M/2;

          @media screen and (max-width: $MIN-MD) {
            max-height: initial;
          }
        }
      }

      .title a, .caption a {
        color: #333;

        &:hover {
          text-decoration: none;
          color: $azure-color;
        }
      }
    }

  }

}


// Footer
footer {
  width: 100%;
  background-color: black;
  padding: $M 0;
  .social-media {
    width:         $M*5;
    height:        $M*5;
    margin:        $M*2;
    line-height:   $M*5;
    font-size:     18px;
    color:         white;
    border:        1px solid white;
    border-radius: 50%;

    &:hover {
      color:        $azure-color;
      border-color: $azure-color;
      transition: color 0.5s, border-color 0.5s;
    }
  }

  .copy-right {
    margin:     0 auto;
    padding:    20px;
    width:      35%;
    border-top: 1px solid #333;
    font-size:  16px;
    color:      rgb(153, 153, 153);
  }
}

// Partial style
@import 'partials/popularbar';

// User style
@import 'users/new';

// Article style
@import 'articles/index';
@import 'articles/new';
@import 'articles/show';
@import 'articles/history';

// Comment stlye
@import 'comments/show';

// Vocab style
@import 'vocabs/index';

